--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-brand img {
-    height: 40px; 
+    height: 40px;
+    margin-left:18px;
 }
 
 .navbar-nav .nav-link {
